<resources>
    <!--<string name="app_name">palacio</string>
    <string name="WSServer">http://10.0.3.2:8080/GoOnServices/</string>-->
    <string name="app_name">jjoo</string>
    <string name="WSServer">http://proyecto.onmypc.org:8080/GoOnServices/</string>
    <string name="app_label">GoOnGuarda JJOO</string>
    <string name="action_settings">Configuración</string>
    <string name="action_viajes">Mis Viajes</string>
    <string name="action_gps">Gps</string>
    <string name="action_bus">Bus</string>
    <string name="error_timeout">Tiempo de espera agotado, Intente nuevamente</string>
    <string name="title_activity_login">Login</string>
    <string name="scan">Leer QR</string>
    <string name="action_newpasaje">Cobrar Pasaje</string>
    <string name="action_venderpasaje">Vender Pasaje</string>
    <string name="action_finish_viaje">Finalizar Viaje</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="precio">Precio</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="nro_asiento">Nro. Asiento</string>


    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_user">Usuario/Contraseña inválidos</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="permission_rationale">"Permisos del contacto son necesarios para email noseque."</string>
    <string name="grilla_asiento">"Asiento"</string>
    <string name="grilla_usuario">"Usuario"</string>
    <string name="grilla_origen">"Origen"</string>
    <string name="grilla_destino">"Destino"</string>
    <string name="error_conexion">Error en la conexión, Intente nuevamente</string>
    <string name="iniciarViaje">Iniciar Viaje</string>
    <string name="finViaje">Finalizar Viaje</string>
    <string name="tokenInvalido">"Credenciales Inválidas, favor inicie sesión"</string>
    <string name="error_invalid_role">Usuario sin permiso</string>
    <string name="qr_pasaje">"Pasaje"</string>
    <string name="cerrarsesionyviaje">"Finalizar viaje y cerrar sesión"</string>
    <string name="nro_viaje">"Nro. Viaje"</string>
    <string name="relevo">"Relevarme"</string>


    <string name="auth">"/auth"</string>
    <string name="getSiguienteViaje">/getLastTravelByDriver</string>
    <string name="startTravel">/startTravel</string>
    <string name="finishTravel">/finishTravel</string>
    <string name="collectTicket">/collectTicket</string>
    <string name="findNextStationsByOrigin">/FindNextStationsByOrigin</string>
    <string name="setTravelLocation">/setTravelLocation</string>
    <string name="getTicketValue">/getTicketValue</string>
    <string name="buyTicket">/buyTicket</string>
    <string name="preBuyTickets">"/preBuyTicket"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
