<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/popup"
    android:layout_height="wrap_content"
    android:background="@color/fondoActivity"
    android:orientation="vertical"
    android:weightSum="7">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popupContenido"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:weightSum="6"
        android:layout_weight="6">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/popupLogo"
                android:layout_gravity="center_vertical"
                android:src="@drawable/add_ticket_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="0dip"/>
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_venderpasaje"
                android:textColor="@color/detalles"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/textViewOrigen"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_gravity="center_horizontal"
                        android:gravity="left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:hint="@string/grilla_origen" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destino"
                android:textColor="@color/colorAccent"
                android:layout_gravity="left"
                android:textSize="12dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                    android:id="@+id/spinnerDestino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/destino"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:spinnerMode="dialog"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/textViewNroAsi"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:hint="@string/nro_asiento" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_weight="1"
            android:layout_marginTop="10dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_weight="5"
                android:gravity="right"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/precio"
                    android:textColor="@color/detalles"
                    android:visibility="gone"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_weight="5">

                    <TextView
                        android:id="@+id/popupPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/close"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancelar" />

        <Button
            android:id="@+id/vender"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_aceptar"
            android:layout_alignTop="@+id/close"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <ProgressBar
            android:id="@+id/vender_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/close"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>