<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/popupInfoPasajero"
    android:layout_height="wrap_content"
    android:background="@color/wallet_bright_foreground_holo_dark"
    android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popupContenido"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Información del Pasajero"
                android:textColor="@color/detalles"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:src="@drawable/user"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dip"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fondo"
                    android:text="@string/nro_asiento"
                    android:textSize="15dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/popupInfoPasajeroNroAsiento"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textColor="@color/fondoActivity"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:textColor="@color/fondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origen"
                android:textSize="15dp"/>
            <TextView
                android:textColor="@color/fondo"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ->" />

            <TextView
                android:id="@+id/popupInfoPasajeroOrigen"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/fondoActivity" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/popupInfoPasajeroDestino"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/fondoActivity"/>

            <TextView
                android:layout_marginLeft="3dp"
                android:textColor="@color/fondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="-> " />

            <TextView
                android:textColor="@color/fondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/destino" />

        </LinearLayout>

        <Button
            android:id="@+id/close"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/wallet_bright_foreground_holo_dark"
            android:text="Ok" />
    </LinearLayout>


</LinearLayout>