<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/popupInfoPasajero"
    android:layout_height="wrap_content"
    android:background="@color/wallet_bright_foreground_holo_dark"
    android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popupContenido"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Viaje finalizado con éxito!"
                android:textColor="@color/detalles"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:src="@drawable/bus_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dip"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fondo"
                    android:text="@string/nro_viaje"
                    android:textSize="15dp"
                    android:layout_gravity="center_horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/popupFinViajeNroViaje"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:text="12"
                        android:textColor="@color/fondoActivity"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/popupFinViajeHorarios"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13dp"
                        android:text="12:43 - 21:31"
                        android:textColor="@color/negro"
                        android:layout_gravity="right"
                        android:layout_alignBaseline="@+id/popupFinViajeNroViaje"
                        android:layout_alignBottom="@+id/popupFinViajeNroViaje"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:textColor="@color/fondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origen"
                android:textSize="15dp"/>
            <TextView
                android:textColor="@color/fondo"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ->" />

            <TextView
                android:id="@+id/popupFinViajeOrigen"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="Piriapolis"
                android:textColor="@color/fondoActivity" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/popupFinViajeDestino"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="Punta Carretas"
                android:textColor="@color/fondoActivity"/>

            <TextView
                android:layout_marginLeft="3dp"
                android:textColor="@color/fondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="-> " />

            <TextView
                android:textColor="@color/fondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/destino" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/detalles"
            android:text="Resumen"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/fondo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="Pasajes Cobrados" />

                <TextView
                    android:id="@+id/popupFinViajePasajesCobrados"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="12"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/negro"
                    android:layout_gravity="right" />
            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dp">

                <TextView
                    android:textColor="@color/fondo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="Pasajes Vendidos" />

                <TextView
                    android:id="@+id/popupFinViajePasajesVendidos"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="45"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/negro"
                    android:layout_gravity="right" />
            </RelativeLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dp">

                <TextView
                    android:textColor="@color/fondo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="Recaudación" />

                <TextView
                    android:id="@+id/popupFinViajeRecaudacion"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="$ 4523"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/negro"
                    android:layout_gravity="right" />
            </RelativeLayout>

        </LinearLayout>


        <Button
            android:id="@+id/close"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/wallet_bright_foreground_holo_dark"
            android:text="Ok" />
    </LinearLayout>


</LinearLayout>